--- a/frontend/src/components/Info.css
+++ b/frontend/src/components/Info.css
@@ -1,6 +1,8 @@
 #info {
-	width: 100%;
-	height: 300px;
 	background: #eee;
-	padding: 10px;
+	padding: 8px;
+}
+
+#info .group {
+	margin-bottom: 5px;
 }
