--- a/frontend/src/components/BookingTable.scss
+++ b/frontend/src/components/BookingTable.scss
@@ -13,7 +13,11 @@ $selected-tint: #f9efa2;
 		border-bottom: 2px solid white;
 
 		&.empty {
-			background: transparent;
+			border-bottom: 0 !important;
+		}
+
+		&.empty-date {
+			border-right-width: 2px;
 		}
 	}
 
