--- a/frontend/src/components/Minimap.scss
+++ b/frontend/src/components/Minimap.scss
@@ -14,7 +14,10 @@
 	}
 
 	canvas {
-		awidth: 100%;
-		aimage-rendering: pixelated;
+		float: left;
+		clear: both;
+		margin-bottom: 10px;
+		//width: 100%;
+		//image-rendering: pixelated;
 	}
 }
