--- a/frontend/src/components/Minimap.scss
+++ b/frontend/src/components/Minimap.scss
@@ -17,7 +17,7 @@
 		float: left;
 		clear: both;
 		margin-bottom: 10px;
-		//width: 100%;
-		//image-rendering: pixelated;
+		width: 100%;
+		image-rendering: pixelated;
 	}
 }
