--- a/frontend/src/components/Minimap.scss
+++ b/frontend/src/components/Minimap.scss
@@ -1,5 +1,4 @@
 #minimap {
-	awidth: 90%;
 	clear: both;
 	display: inline-block;
 
@@ -19,7 +18,7 @@
 		float: left;
 		clear: both;
 		margin-bottom: 10px;
-		awidth: 100%;
+		width: 100%;
 		image-rendering: pixelated;
 	}
 }
