--- a/frontend/src/components/Minimap.scss
+++ b/frontend/src/components/Minimap.scss
@@ -2,23 +2,28 @@
 	clear: both;
 	display: inline-block;
 
-	.left {
-		float: left;
-	}
-
-	.right {
-		float: right;
-	}
-
-	.left, .right {
-		font-size: 10pt;
-	}
-
 	canvas {
 		float: left;
 		clear: both;
 		margin-bottom: 10px;
 		width: 100%;
 		image-rendering: pixelated;
+	}
+
+	table {
+		width: 100%;
+		font-size: 10pt;
+
+		.left {
+			text-align: left;
+		}
+
+		.center {
+			text-align: center;
+		}
+
+		.right {
+			text-align: right;
+		}
 	}
 }
