--- a/frontend/src/components/BookingTable.scss
+++ b/frontend/src/components/BookingTable.scss
@@ -1,14 +1,22 @@
+$date-cell-color: #d8d8d8;
 $cell-color: #eee;
 $booking-color: #2ad62a;
 $selected-tint: #f9efa2;
+$weekend-color: mix($cell-color, #DCC2DC, 15);
 
 #bookings {
+	user-select: none;
+
 	th {
 		text-align: center;
-		background: #d8d8d8;
+		background: $date-cell-color;
 		padding: 5px;
 		border-right: 4px solid white;
 		border-bottom: 2px solid white;
+
+		&.weekend {
+			background-color: $weekend-color;
+		}
 
 		&:last-child {
 			border-right: 0;
@@ -29,6 +37,11 @@ $selected-tint: #f9efa2;
 		text-align: center;
 		background: $cell-color;
 		border-bottom: 1px solid white;
+		
+
+		&.weekend {
+			background-color: $weekend-color;
+		}
 
 		&.day-left {
 			border-right: 2px solid white;
@@ -44,6 +57,14 @@ $selected-tint: #f9efa2;
 			text-align: left;
 			padding-left: 3px;
 			border-right: 2px solid white;
+			overflow: hidden;
+			white-space: nowrap;
+
+			div {	
+				display: block;
+				width: 35px;
+			}
+
 		}
 
 		&.selected {
