--- a/frontend/src/components/BookingTable.scss
+++ b/frontend/src/components/BookingTable.scss
@@ -7,7 +7,14 @@ $weekend-color: mix($cell-color, #DCC2DC, 15);
 #bookings {
 	user-select: none;
 
+	tr:last-child td {
+		height: 0;
+		background: transparent;
+	}
+
 	th {
+		width: 35px;
+		height: 35px;
 		text-align: center;
 		background: $date-cell-color;
 		padding: 5px;
@@ -36,8 +43,7 @@ $weekend-color: mix($cell-color, #DCC2DC, 15);
 		height: 35px;
 		text-align: center;
 		background: $cell-color;
-		border-bottom: 1px solid white;
-		
+		border-bottom: 1px solid white;		
 
 		&.weekend {
 			background-color: $weekend-color;
@@ -60,11 +66,9 @@ $weekend-color: mix($cell-color, #DCC2DC, 15);
 			overflow: hidden;
 			white-space: nowrap;
 
-			div {	
-				display: block;
-				width: 35px;
+			div {
+				width: 0px;
 			}
-
 		}
 
 		&.selected {
