--- a/frontend/src/components/Info.scss
+++ b/frontend/src/components/Info.scss
@@ -14,6 +14,12 @@
 		input#info-nights, label[for=info-nights] {
 			text-align: center;
 		}
+
+		input {
+			&.error {
+				border-color: red;
+			}
+		}
 	}
 
 	button {
