--- a/frontend/src/components/Info.scss
+++ b/frontend/src/components/Info.scss
@@ -4,6 +4,21 @@
 	max-width: 400px;
 	margin-bottom: 10px;
 
+	.group {
+		padding: 0 10px 10px 10px;
+		border: 1px solid #aaa;
+		margin-top: 10px;
+
+		legend {
+			width: auto;
+			padding: 0 5px;
+			margin:0 ;
+			font-size: 12pt;
+			background: #ddd;
+			border: 1px solid #aaa;
+		}
+	}
+
 	.form-group {
 		margin-bottom: 3px;
 
@@ -17,7 +32,7 @@
 
 		input {
 			&.error {
-				border-color: red;
+				border-color: #e2a3a3;
 			}
 		}
 	}
