--- a/frontend/src/components/CustomerSelectList.scss
+++ b/frontend/src/components/CustomerSelectList.scss
@@ -3,6 +3,11 @@
 	width: 100%;
 	background: white;
 	border: 1px solid #ccc;
+	padding: 10px;
+
+	button {
+		margin-bottom: 10px;
+	}
 
 	td {
 		padding: 5px;
