--- a/frontend/src/components/css/Info.scss
+++ b/frontend/src/components/css/Info.scss
@@ -40,4 +40,13 @@
 	button {
 		margin-top: 5px;
 	}
+
+	.icon.cancel {
+		color: red;
+		margin-top: -2px;
+	}
+
+	.options {
+		padding: 3px 6px;
+	}
 }
