--- a/frontend/src/components/css/Overlay.scss
+++ b/frontend/src/components/css/Overlay.scss
@@ -7,5 +7,12 @@
 	bottom: 0;
 	background: rgba(255, 255, 255, 0.5);
 	z-index: 100;
-	padding-top: 50px;
+	padding-top: 15px;
+
+	> div {
+		width: 100%;
+		background: white;
+		border: 1px solid #ccc;
+		padding: 10px;
+	}
 }
